@@ -293,3 +293,15 @@ module Spreadsheet
     end
 
 end
+
+=begin rdoc
+
+== AUTHOR
+
+Jeff Anderson, <jeffa at cpan.org>
+
+== LICENSE AND COPYRIGHT
+
+Copyright 2016 Jeff Anderson. (See License.md shipped with distro)
+
+=end
