@@ -1,6 +1,7 @@
 Revision history for html-autotag-ruby
 
 1.0.1
+    - update copyright date
 
 1.0.0
     - production ready
